--- a/samples/typescript/DisplayingABitmap/package.json
+++ b/samples/typescript/DisplayingABitmap/package.json
@@ -1,10 +1,12 @@
 {
-	"name": "displayingabitmap",
-	"version": "1.0.0",
-	"dependencies": {
-		"openfl": "*"
-	},
-	"scripts": {
-		"build": "tsc -p tsconfig.json && browserify entry.js --debug > bundle.js"
-	}
+  "name": "displayingabitmap",
+  "version": "1.0.0",
+  "devDependencies": {
+    "openfl": "*",
+    "webpack": "^3.10.0"
+  },
+  "scripts": {
+    "build": "tsc -p tsconfig.json && webpack --devtool source-map entry.js bundle.js",
+    "test": "npm run build && http-server -c-1 --cors"
+  }
 }
