--- a/samples/typescript/helloworld/package.json
+++ b/samples/typescript/helloworld/package.json
@@ -1,10 +1,12 @@
 {
 	"name": "helloworld",
 	"version": "1.0.0",
-	"dependencies": {
-		"openfl": "*"
+	"devDependencies": {
+	  "openfl": "*",
+	  "webpack": "^3.10.0"
 	},
 	"scripts": {
-		"build": "tsc -p tsconfig.json && browserify entry.js --debug > bundle.js"
+	  "build": "tsc -p tsconfig.json && webpack --devtool source-map entry.js bundle.js",
+	  "test": "npm run build && http-server -c-1 --cors"
 	}
-}
+  }
