Add default lib import

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"Joshua Granick",
 		"Other OpenFL contributors"
 	],
-	"main": "src/openfl/",
+	"main": "src/openfl/index.js",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/openfl/openfl-js.git"
