npm run docker-test-clean
Stops any running containers that match openfljs_test_$TESTNAME

--- a/package.json
+++ b/package.json
@@ -34,5 +34,6 @@
 		"docker-rebuild":				"docker build -t openfl/openfl_js .",
 		"docker-build-clean":			"docker build --no-cache -t openfl/openfl_js .",
 
+		"docker-test-clean":			"docker ps -a -q --filter \"name=openfljs_test_$TESTNAME\" | xargs docker stop | xargs docker rm -fv",
 	}
 }
