--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 		"docker-rebuild":				"docker build -t openfl/openfl_js .",
 		"docker-build-clean":			"docker build --no-cache -t openfl/openfl_js .",
 
+		"docker-test-build":			"npm run docker-test-clean && docker build -t openfl/openfl_js_test_$TESTNAME $TESTDIR && npm run docker-test-run",
+
 		"docker-test-run":				"docker run -d --name openfljs_test_$TESTNAME -p 8080 openfl/openfl_js_test_$TESTNAME && npm run docker-tests-list",
 
 		"docker-test-clean":			"docker ps -a -q --filter \"name=openfljs_test_$TESTNAME\" | xargs docker stop | xargs docker rm -fv",
