--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
 		"type": "git",
 		"url": "https://github.com/openfl/openfl-js.git"
 	},
+	"devDependencies": {
+		"cross-env": "*"
+	},
 	"scripts": {
 		"build":						"cd scripts/build && haxe build.hxml",
 		"prepublishOnly":				"npm run build",
@@ -41,6 +44,12 @@
 		"docker-test-clean":			"docker ps -a -q --filter \"name=openfljs_test_$TESTNAME\" | xargs docker stop | xargs docker rm -fv",
 		"docker-tests-clean":			"docker ps -a -q --filter \"name=openfljs_test_*\" | xargs docker stop | xargs docker rm -fv",
 		"docker-tests-list":			"docker ps --format='{{.Names}} {{.Ports}}' --filter 'name=openfljs_test_*' | awk -F'[->]' '{print $1}' | awk -F'[ ]' '{print \"http://\" $2 \" runs \"$1 }' && echo && echo after you\\'re finished run : npm run docker-tests-clean",
+
+		"test-es5-helloworld":			"cross-env TESTNAME=es5_helloworld TESTDIR=samples/es5/helloworld npm run docker-test-build",
+		"test-es5-displayingabitmap":	"cross-env TESTNAME=es5_displayingabitmap TESTDIR=samples/es5/DisplayingABitmap npm run docker-test-build",
+		"test-es5-bunnymark":			"cross-env TESTNAME=es5_bunnymark TESTDIR=samples/es5/BunnyMark npm run docker-test-build",
+
+		"test-es5-all":					"npm run test-es5-helloworld && npm run test-es5-displayingabitmap && npm run test-es5-bunnymark",
 
 	}
 }
