--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 
 		"docker-test-build":			"npm run docker-test-clean && docker build -t openfl/openfl_js_test_$TESTNAME $TESTDIR && npm run docker-test-run",
 
-		"docker-test-run":				"docker run -d --name openfljs_test_$TESTNAME -p 8080 openfl/openfl_js_test_$TESTNAME && npm run docker-tests-list",
+		"docker-test-run":				"docker run -d --name openfljs_test_$TESTNAME -p 8080 openfl/openfl_js_test_$TESTNAME && npm run docker-test-running",
+		"docker-test-running":			"sleep 3 && if [[ `docker inspect -f {{.State.Running}} openfljs_test_$TESTNAME` == \"false\" ]]; then docker logs openfljs_test_$TESTNAME ; else npm run docker-tests-list ; fi",
 
 		"docker-test-clean":			"docker ps -a -q --filter \"name=openfljs_test_$TESTNAME\" | xargs docker stop | xargs docker rm -fv",
 		"docker-tests-clean":			"docker ps -a -q --filter \"name=openfljs_test_*\" | xargs docker stop | xargs docker rm -fv",
